  wxDocument::GetPrintableName() with GetUserReadableName() which are simpler
  to use
- wxXmlProperty class was renamed to wxXmlAttribute in order to use standard
  terminology. Corresponding wxXmlNode methods were renamed to use
  "Attribute" instead of "Property" or "Prop" in their names.


Major new features in this release
----------------------------------


2.9.0
-----

All:

- Added wxJoin() and wxSplit() functions (Francesco Montorsi)
- Added wxMutex::LockTimeout() (Aleksandr Napylov)
- Added wxMemoryInputStream(wxInputStream&) ctor (Stas Sergeev)
- Implemented wxMemoryInputStream::CanRead()
- Added wxEXEC_BLOCK flag (Hank Schultz)
- Add support for wxStream-derived classes to wxRTTI (Stas Sergeev)
- Added wxStreamBuffer::Truncate() (Stas Sergeev)
- Allow using  wxEventLoop in console applications (Lukasz Michalski)
- Added functions for Base64 en/decoding (Charles Reimers)
- Added support for binary data to wxConfig (Charles Reimers)
- Added functions for atomically inc/decrementing integers (Armel Asselin)
- wxLogInterposer has been added to replace wxLogPassThrough and new
  wxLogInterposerTemp was added
- Added support for broadcasting to UDP sockets (Andrew Vincent)

All (Unix):

- Added wx-config --optional-libs command line option (John Labenski)

All (GUI):

- Added wxH[V]ScrolledWindow (Brad Anderson, Bryan Petty)
- Added wxDC::StretchBlit() for wxMac and wxMSW (Vince Harron)
- Added support for drop down toolbar buttons (Tim Kosse)
- Added support for labels for toolbar controls (Vince Harron)
- Added wxMessageDialog::SetMessage() and SetExtendedMessage()
- Added wxEventBlocker class (Francesco Montorsi).
- Added wxFile/DirPickerCtrl::Get/SetFile/DirName() (Francesco Montorsi).
- Added wxSizerFlags::Top() and Bottom().
- Slovak translation added.
- Fixed tab-related drawing and hit-testing bugs in wxRichTextCtrl.
- Implemented background colour in wxRichTextCtrl.
- Fixed crashes in helpview when opening a file.